[workspace]

members = ["client"]


[package]
name = "l2e"
version = "0.1.0"
edition = "2021"

[dependencies]
l2e-app = { path = "app" }

[build-dependencies]
l2e-app = { path = "app" }
sails-rs = { version = "0.4.0", features = ["wasm-builder"] }
sails-idl-gen = "0.4.0"

[dev-dependencies]
l2e = { path = ".", features = ["wasm-binary"] }
l2e-client = { path = "client" }
sails-rs = { version = "0.4.0", features = ["gtest"] }
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
wasm-binary = []
