[package]
name = "l2e-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs = "0.3.0"
gstd = "1.5.0"
scale-info = { version = "*", default-features = false }
parity-scale-codec = { version = "*", default-features = false }
vft_client = { path = "../extended-vft/client" }
vnft_client = { path = "../extended-vnft/client" }
