[package]
name = "l2e-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.13", optional = true }
sails-rs = "0.3.0"

[build-dependencies]
l2e-app = { path = "../app" }
sails-client-gen = "0.3.0"
sails-idl-gen = "0.3.0"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
